--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.1",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "jquery": "^3.3.1",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15"
   },
